New folder/open-interpreter/codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_debug_view_match.snap
---
source: tui/src/keymap_setup.rs
expression: rendered
---
Keypress Inspector
Press any key to see what the agent receives. Esc is inspected; Ctrl+C closes.
Tip: the agent can only inspect keys your terminal sends.

Detected: f8
Config key: f8
Raw event: code=F(8), modifiers=none, kind=Press

Assigned actions:
  - chat.toggle_voice (Toggle Voice) - Start or stop a voice conversation. [Default]
